delete Price, add jwt